# VaultNote

./: .gitignore  README.md  index.html  package-lock.json  package.json  systemDesign.md  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx  LockModal.tsx  VaultPicker.tsx
src/components/Canvas/: index.tsx
src/components/CommandPalette/: index.tsx
src/components/Editor/: CodeMirrorEditor.tsx  EditorTabs.tsx  EmptyEditor.tsx  MarkdownPreview.tsx  index.tsx
src/components/EntityPanel/: index.tsx
src/components/FlashcardMode/: index.tsx
src/components/GraphView/: index.tsx
src/components/QuickCapture/: index.tsx
src/components/RelatedNotes/: index.tsx
src/components/Search/: SearchModal.tsx
src/components/Settings/: index.tsx
src/components/Sidebar/: ContextMenu.tsx  FileTreeNode.tsx  index.tsx
src/components/VaultLock/: index.tsx
src/hooks/: useAutoSave.ts  useFileWatcher.ts  useKeyboardShortcuts.ts
src/lib/: dailyNote.ts  directoryLock.ts  embeddings.ts  entities.ts  fs.ts  markdown.ts  pathUtils.ts  search.ts  sm2.ts  vaultCrypto.ts  wikilinks.ts
src/stores/: editorStore.ts  embeddingStore.ts  fileStore.ts  flashcardStore.ts  graphStore.ts  highlightStore.ts  lockStore.ts  noteRegistryStore.ts  searchStore.ts  settingsStore.ts  tabStore.ts  uiStore.ts  vaultPasswordStore.ts  vaultStore.ts
src/types/: index.ts
