[package]
name = "vaultnote"
version = "0.1.0"
description = "VaultNote - Local-first Markdown Notetaker"
authors = []
edition = "2021"
rust-version = "1.77.2"
default-run = "vaultnote"

[lib]
name = "vaultnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
